--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "./src/index.js",
   "scripts": {
-    "develop": "budo ./src/index.js --live -- -t babelify"
+    "develop": "budo ./src/index.js --live -- -t babelify",
+    "build": "browserify ./src/index.js -o ./bui/index.js -t [ babelify --presets [ es2015 ] ]"
   },
   "author": "Florian Maxim Brüggemann",
   "license": "ISC",
   "dependencies": {
     "babel-core": "^6.18.2",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.1",
+    "budo": "^9.2.2",
     "three": "^0.82.1"
   }
 }
